- Menambahkan halaman detail Tvshow - Menambahkan class DetailMovieViewModelTest.kt, DetailTvShowViewModel.kt, DetailTvShowViewModelTest.kt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyMovieCatalogue">
-
-        <activity android:name=".SplashScreen"
+        <activity android:name=".detailTvShow.DetailTvShowActivity"></activity>
+        <activity
+            android:name=".SplashScreen"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,15 +21,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".detail.DetailActivity"
+            android:name=".detailMovie.DetailMovieActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-
         <activity
             android:name=".home.HomeActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-
     </application>
 
 </manifest>
